--- a/package.json
+++ b/package.json
@@ -8,12 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.8.0",
+    "@react-native-community/masked-view": "0.1.10",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^8.1.2",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-action-sheet": "^2.2.0",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-swipeout": "^2.3.6",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^3.13.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "expo-permissions": "~9.3.0",
+    "expo-image-picker": "~9.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
